--- a/fe-study/style.css
+++ b/fe-study/style.css
@@ -1,3 +1,17 @@
+h1 {
+  padding: 0.5em;/*文字周りの余白*/
+  color: #010101;/*文字色*/
+  background: #eaf3ff;/*背景色*/
+  border-bottom: solid 3px #516ab6;/*下線*/
+}
+
+h2 {
+  padding: 0.5em;/*文字周りの余白*/
+  color: #494949;/*文字色*/
+  background: #f4f4f4;/*背景色*/
+  border-left: solid 5px #7db4e6;/*左線（実線 太さ 色）*/
+}
+
 p {
   font-size: 16px;
 }
@@ -22,6 +36,10 @@ body {
   line-height: 1.75;
 }
 
+.yellow {
+    background: linear-gradient(transparent 60%, #ffff66 60%);
+}
+
 img.ww {
   width: 80%;
 }
@@ -35,6 +53,20 @@ img.hh {
 }
 
 @media screen and (max-width: 750px) {
+  h1 {
+    padding: 0.5em;/*文字周りの余白*/
+    color: #010101;/*文字色*/
+    background: #eaf3ff;/*背景色*/
+    border-bottom: solid 3px #516ab6;/*下線*/
+  }
+  
+  h2 {
+    padding: 0.5em;/*文字周りの余白*/
+    color: #494949;/*文字色*/
+    background: #f4f4f4;/*背景色*/
+    border-left: solid 5px #7db4e6;/*左線（実線 太さ 色）*/
+  }
+  
   p {
     font-size: 15px;
   }
